# tetorica-deskel

./: README.md  deploy_mac.sh  index.html  package-lock.json  package.json  vite.config.ts
docs/: index.html
docs/demo/: index.html  sw-template.js  sw.js
public/: manifest.webmanifest  sw-template.js  sw.js
scripts/: build-sw.mjs
src/: App.tsx  AppBackgroundImageCanvas.tsx  AppCameraDeskel.tsx  AppColorAnalysis.tsx  AppDeskel.tsx  AppDeskelCaptureToolbar.tsx  AppDeskelImageToolbar.tsx  AppDeskelMeasureToolbar.tsx  AppImportImage.tsx  AppScreenCaptureCanvas.tsx  AppSimpleDrawCanvas.tsx  AppToolbar.tsx  CameraDeskel.tsx  CaptureHandler.ts  ColorHandler.ts  CustomTitlebar.tsx  DeskelSimpleDrawCanvas.tsx  DeskelToolHandler.ts  MeasureHandler.ts  NativeCustomTitlebar.tsx  _main.ts.txt  chainMesure.ts  colorAnalysisDarw.ts  colorPalette.ts  deskel.ts  deskelChainMesure.ts  deskelClipRect.ts  deskelMeasure.ts  deskelMeasurePerspectiveRuler.ts  deskelPoint.ts  deskel_measure.ts  main.ts  main.tsx  native.ts  nativePermissionCheck.ts  nativeScreenshot.ts  permissionCheck.ts  pwa.ts  screenCapture.ts  screen_capture.ts  (+10 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: color_analysis.rs  color_pallet.rs  lib.rs  main.rs  screen_capture.rs
src/algos/: colorAnalysis.ts  colorAnalysisDarw.ts  colorPalette.ts  deskel.ts  deskelChainMesure.ts  deskelClipRect.ts  deskelCommon.ts  deskelMeasure.ts  utils.ts
src/natives/: native.ts  nativeScreenshot.ts  nativeShortcut.ts  nativeWebScreenshot.ts  (+2 more)
(+69 files in other folders)
